Contrast fix
Contrast issue on low % poll results: low %s have white text appearing
over grey background. Changed text to black and moved it to the left of
the results bar.

--- a/assets/css/ou--ldp--polls.css
+++ b/assets/css/ou--ldp--polls.css
@@ -2,6 +2,7 @@
 .ldp--poll-graph {
   position: relative;
   width:300px;
+  margin:0;
 }
   .col-3 .left .ldp--poll-graph, .col-2 .left .ldp--poll-graph, .secnav_subsite .ldp--poll-graph {width:160px;}
 
@@ -14,7 +15,6 @@
   line-height: 1.2;
   font-weight: bold;
   font-size:87.5%;
-  margin-bottom:3px;
   width:300px;
 }
 .col-3 .left .ldp--poll-bar-title, .col-2 .left .ldp--poll-bar-title, .secnav_subsite .ldp--poll-bar-title {width:160px;}
@@ -24,8 +24,8 @@
   position: relative;
   float: left;
   height: 12px;
-  margin: 0px 0px 10px;
-  width:300px;
+  margin: 6px 0px 6px 48px;
+  width:252px;
 }
   .col-3 .left .ldp--poll-bar-container, .col-2 .left .ldp--poll-bar-container, .secnav_subsite .ldp--poll-bar-container {width:160px;}
 
@@ -38,10 +38,10 @@
 
 .ldp--poll-bar-container strong {
   position: absolute;
-  left: 5px;
+  left: -48px;
   top: 0px;
   overflow: hidden;
-  color: #FFF;
+  color: #000;
   line-height:1.2;
   font-size:87.5%;
   
@@ -80,7 +80,7 @@
   float:left;
   clear:both;
   display:block;
-  margin:10px 0;
+  margin:0 0 12px;
 }
 .ldp--poll input {float:left; clear:both;}
 .ldp--inputRadio {margin:5px 5px 5px 0;}
